--- a/public/admin_assets/assets/css/aiz-core.css
+++ b/public/admin_assets/assets/css/aiz-core.css
@@ -77,10 +77,13 @@ use custom-style.css
 .btn-primary {
     color: #fff;
     background-color: #007bff !important;
-    border-color: #007bff !important;
+    border-color: #64a644 !important;
+    box-shadow: none;
+    background-image: linear-gradient(to right, #64a644, #64a644, #64a644, #64a644);
+    /* border-color: #007bff !important;
     box-shadow: none;
     
-    background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
+    background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed); */
 }
 
 .btn-secondary:hover {
@@ -108,7 +111,9 @@ use custom-style.css
     background-color: #28a745 ;
     border-color: #28a745 ;
     box-shadow: none ;
-    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
+    /* background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673); */
+    background-image: linear-gradient(to right, #64a644, #64a644, #64a644, #64a644);
+    
 }
 
 /*.btn-info:hover {*/
@@ -119,7 +124,9 @@ use custom-style.css
 
 .btn-info {
 
-     background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7);
+     /* background-image: linear-gradient(to right, #667eea, #764ba2, #6B8DD6, #8E37D7); */
+     background-image: linear-gradient(to right, #64a644, #64a644, #64a644, #64a644);
+     border-color: #64a644 !important;
 }
 
 .btn-danger:hover {
@@ -147,9 +154,11 @@ use custom-style.css
 .btn-warning {
     color: #fff !important;
     background-color: #ffc107 ;
-    border-color: #ffc107 ;
+    /* border-color: #ffc107 ; */
     box-shadow: none ;
-    background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516);
+    /* background-image: linear-gradient(to right, #fc6076, #ff9a44, #ef9d43, #e75516); */
+    background-image: linear-gradient(to right, #03a6de, #03a6de, #03a6de, #03a6de);
+    border-color: #03a6de !important;
 }
 
 /*.btn-light:hover {
@@ -5979,15 +5988,17 @@ div.footable-loader > span.fooicon:after {
 }
 
 .pagination .active .page-link {
-  background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
-        background-position: 100% 0;
+    /* background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B); */
+    background-image: linear-gradient(to right, #03a6de, #64a644, #03a6de , #64a644);
+    background-position: 100% 0;
     moz-transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
 }
 .pagination .page-link:hover {
-  background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B);
+  /* background-image: linear-gradient(to right, #ed6ea0, #ec8c69, #f7186a , #FBB03B); */
+  background-image: linear-gradient(to right, #03a6de, #64a644, #03a6de , #64a644);
     color: #fff;
         background-position: 100% 0;
     moz-transition: all .4s ease-in-out;
